welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:5: error: type mismatch;
 found   : Unit
 required: Int
			rep = 2
                            ^caughtSpeeding:9: error: type mismatch;
 found   : Unit
 required: Int
			rep = 0 
                            ^caughtSpeeding:12: error: type mismatch;
 found   : Unit
 required: Int
			rep = 1
                            ^caughtSpeeding:18: error: type mismatch;
 found   : Unit
 required: Int
			rep = 2
                            ^caughtSpeeding:22: error: type mismatch;
 found   : Unit
 required: Int
				rep = 0 
                                    ^caughtSpeeding:25: error: type mismatch;
 found   : Unit
 required: Int
				rep = 1
                                    ^